# RTMPDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/libs/: hello
app/src/androidTest/java/com/example/rtmpdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safeQueue.h  x264-lib.cpp  x264_codec.cpp
app/src/main/cpp/faac/arm64-v8a/lib/: libfaac.la  libfaac.so.0.0.0
app/src/main/cpp/faac/armeabi-v7a/lib/: libfaac.la  libfaac.so.0.0.0
app/src/main/cpp/x264/arm64-v8a/lib/pkgconfig/: x264.pc
app/src/main/cpp/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
app/src/main/java/com/example/: App.java
app/src/main/java/com/example/rtmpdemo/: AudioCodec.java  Camera2Helper.java  CameraCodec.java  MainActivity.java  RTMPPacket.java  ScreenLive.java  VideoCodec.java
app/src/main/java/com/example/rtmpdemo/mediacodec/: AudioCodec.java  Camera2Helper.java  CameraCodec.java  MediaCodecActivity.java  RTMPPacket.java  ScreenLive.java  VideoCodec.java
app/src/main/java/com/example/rtmpdemo/util/: FileUtil.java  ImageUtil.java  LiveTaskManager.java
app/src/main/java/com/example/rtmpdemo/x264/: AudioHelper.java  CameraXActivity.kt  LivePush.java  RTMPPacket.java  VideoChannel.java  VideoHelper.java  VideoHelper2.java  X264Activity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rtmpdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
